--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -670,7 +670,7 @@ There are 6 things to count.
   \item{Alpha detector broken, fixed by plugging into proper port}
   \item{Counted Calibration Alpha source}
     \begin{itemize}
-    \item{item}
+    \item{Somestuff}
     \end{itemize}
   \item{Counted Background}
   \end{itemize}
