--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -900,7 +900,7 @@ John also mentioned two good techniques, that should be noted:
 %	LAB BOOK day
 %-----------------------------------------------------------------------
 
-\labday{Friday, 21 October 2016\\ 9:30am - 12:00 pm\\1:00 pm 5:00 pm}
+\labday{Friday, 21 October 2016\\ 9:30am - 12:00 pm\\1:00 pm 6:00 pm}
 
 \begin{todolist}
 \item[\done]{Updated this lab notebook (most of this morning)}
@@ -909,13 +909,46 @@ John also mentioned two good techniques, that should be noted:
 \experiment{Cycle_2_Prep}
 
 \begin{todolist}
-\item{Practice pipetting out with squish tops like John Mentioned}
+\item[\done]{Practice pipetting out with squish tops like John Mentioned}
   \begin{itemize}
+  \item{Used Kerosene solution, used squish pipettes and variable
+    pipettes - settled upon using 500 $\mu$l
+    and taking out 350 $\mu$l and then
+    getting as much out as possible with the squish pipette -
+    I get about 450 $\mu$l of bottom phase (HNO\tsbs{3})
+    and 425 $\mu$l of top phase (TBP)}
   \item{Determine if 0.3 ml is a good amount of solution to use}
+  \item{Switching to 0.5 ml, keeping smaller vials}
   \end{itemize}
+\item[\done]{Create and label vials $\boxed{5}$ $\boxed{6}$ and
+  $\boxed{7}$ to hold stock solution. Did not leech them,
+  hopefully barium contamination wont be a huge deal,
+  we will assume all the data for Cs can be gathered from \tss{133}Cs.}
+\item[\done]{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{5}$}
+\item[\done]{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{6}$}
+\item[\done]{Transfer 0.5 ml of $\boxed{Stock}$ to $\boxed{7}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{5}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{6}$}
+\item[\done]{Add scoop of sodium nitrite to $\boxed{7}$}
+\item[\done]{Centrifuged $\boxed{5}$, $\boxed{6}$
+  and $\boxed{7}$ to push all solution to
+  botttom of vials}
+\item[\done]{Start count of $\boxed{5}$ noticed bubbles in solution,
+  might have to recount - left overnight}
 \end{todolist}
 
+\experiment{Process1_Fail_Counting2}
 
+\begin{todolist}
+\item[\done]{Took 20 $\mu$l out of $\boxed{3}$ and put
+  onto planchet chip (no dillution)}
+  \begin{itemize}
+  \item{Moved chip too early (before drying, ruined
+    detector volume)}
+  \item{Made another source with an additional 20 $\mu$l,
+    letting it dry over night}
+  \end{itemize}
+\end{todolist}
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
