--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -949,6 +949,28 @@ John also mentioned two good techniques, that should be noted:
     letting it dry over night}
   \end{itemize}
 \end{todolist}
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Saturday, 22 October 2016\\ 3:30pm - 3:45 pm}
+
+\experiment{Cycle_2_Prep}
+
+\begin{todolist}
+\item[\done]{Finished count for $\boxed{5}$}
+\item[\done]{Started count of $\boxed{6}$}
+  \begin{itemize}
+  \item{Switching from push clear caps to blue push caps}
+  \item{This sample had less bubbles than the one yesterday}
+  \end{itemize}
+\end{todolist}
+
+
+
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
