--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -956,7 +956,7 @@ John also mentioned two good techniques, that should be noted:
 %	LAB BOOK day
 %-----------------------------------------------------------------------
 
-\labday{Saturday, 22 October 2016\\ 3:30pm - 3:45 pm}
+\labday{Saturday, 22 October 2016\\ 3:30 pm - 3:45 pm\\ 8:00 pm - 8:30 pm}
 
 \experiment{Cycle_2_Prep}
 
@@ -967,6 +967,14 @@ John also mentioned two good techniques, that should be noted:
   \item{Switching from push clear caps to blue push caps}
   \item{This sample had less bubbles than the one yesterday}
   \end{itemize}
+\item[\done]{Finished count of $\boxed{6}$}
+  \begin{itemize}
+  \item{Some liquid was not at the bottom of the vial,
+    messing with geometry, centrifuged with $\boxed{7}$
+    might have to recount}
+  \end{itemize}
+\item[\done]{Started count of $\boxed{7}$}
+  
 \end{todolist}
 
 
