--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -89,8 +89,9 @@
   Mistake experiment (Alpha)}
 \newexperiment{Process1_Fail_Counting_Analysis}{Analysis
   for Process 1 Mistake (Gamma)}
-\newexperiment{Cycle_2_Prep}{Preparation for 3 Cycles}
+\newexperiment{Cycle_X3_Prep}{Preparation for 3 Cycles}
 \newexperiment{table1}{Isotopes we are looking for}
+\newexperiment{Cycle_X3}{Cycle experiment, replicate of 3}
 %\newexperiment{shorthand}{Description of the experiment}
 
 %----------------------------------------------------------------------
@@ -851,7 +852,7 @@ There are 6 things to count.
 
 \labday{Thursday, 20 October 2016}
 
-\experiment{Cycle_2_Prep}
+\experiment{Cycle_X3_Prep}
 
 Note from John:\\~\\
 After the research meeting yesterday, I thought about Paul’s
@@ -906,7 +907,7 @@ John also mentioned two good techniques, that should be noted:
 \item[\done]{Updated this lab notebook (most of this morning)}
 \end{todolist}
 
-\experiment{Cycle_2_Prep}
+\experiment{Cycle_X3_Prep}
 
 \begin{todolist}
 \item[\done]{Practice pipetting out with squish tops like John Mentioned}
@@ -958,7 +959,7 @@ John also mentioned two good techniques, that should be noted:
 
 \labday{Saturday, 22 October 2016\\ 3:30 pm - 3:45 pm\\ 8:00 pm - 8:30 pm}
 
-\experiment{Cycle_2_Prep}
+\experiment{Cycle_X3_Prep}
 
 \begin{todolist}
 \item[\done]{Finished count for $\boxed{5}$}
@@ -977,8 +978,182 @@ John also mentioned two good techniques, that should be noted:
   
 \end{todolist}
 
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
 
+\labday{Sunday, 23 October 2016}
 
+\experiment{Cycle_X3_Prep}
+
+\begin{todolist}
+\item[\done]{Finished count $\boxed{7}$}
+\item[\done]{Analyzed Counts from $\boxed{5}$, $\boxed{6}$, and
+  $\boxed{7}$}
+  \begin{itemize}
+  \item{Did not like how $\boxed{6}$ didn't fit with others}
+  \end{itemize}
+\item[\done]{Started recount of $\boxed{6}$}
+\item[\done]{Start Excel Sheet for analysis and
+           write program for quicker gamma analysis}
+\end{todolist}
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Monday, 24 October 2016\\10:00 am - 12:00 pm\\3:00 pm -
+        10:00 pm}
+
+\experiment{Cycle_X3_Prep}
+
+\begin{todolist}
+\item[\done]{Finished count $\boxed{6}$}
+\item[\done]{Transfer:}
+  \begin{itemize}
+  \item{Vials labeled $\boxed{5\ Aq}$, 
+    $\boxed{5\ Or}$, $\boxed{6\ Aq}$, $\boxed{6\ Or}$,
+    $\boxed{7\ Aq}$, $\boxed{7\ Or}$}
+  \item{With clear push lids, and blue push lids (named)}
+  \item{Squish pipettes}
+  \end{itemize}
+  Into glovebox small antichamber
+\item[\done]{$\boxed{5}$, $\boxed{6}$, and $\boxed{7}$ already
+  in antichamber}
+\item[\done]{Transfer vials with clear lids into glovebox, but
+  leave the blue lids in the antichamber (lid transfer area)}
+\item[\done]{Dump $\boxed{Back\ Ex\ Solution}$ into aqeuous
+  waste ($\sim$ 0.2 $\mu$l) (decays - will prepare a fresh batch)}
+\end{todolist}
+
+\experiment{Process1_Fail_Counting2}
+
+\begin{todolist}
+\item[\done]{Moved alpha sample to count on PIPS detector}
+  \begin{itemize}
+  \item{Saw energy smearing for counts}
+  \end{itemize}
+\end{todolist}
+
+\experiment{Cycle_X3}
+
+\begin{todolist}
+\item[\done]{Add 500$\mu$l TBP to $\boxed{5}$, $\boxed{6}$,
+  $\boxed{7}$}
+\item[\done]{Shake $\boxed{5}$ on Pulse mode for 15 minutes}
+\item[\done]{Shake $\boxed{6}$ on Pulse mode for 15 minutes}
+\item[\done]{Shake $\boxed{7}$ on Pulse mode for 15 minutes}
+\item[\done]{Create $\boxed{EX Buddy}$ so all samples can be
+  centrifuged together}
+  \begin{itemize}
+  \item{500 $\mu$l of 4 M HNO\tsbs{3} + 500 $\mu$l of 30 vol.\%
+    TBP}
+  \end{itemize}
+\item[\done]{Centrifuge samples for 30,000 rpm for 5 minutes}
+\item[\done]{Separate phases for samples}
+  \begin{itemize}
+  \item{A total of 4 drops were dropped in this process}
+    \begin{enumerate}
+    \item{Sample $\boxed{5}$ aqueous transfer}
+    \item{Sample $\boxed{6}$ organic transfer}
+    \item{Sample $\boxed{7}$ aqueous and organic transfer}
+    \end{enumerate}
+  \item{Using a variable pipette and the squish pipette,
+    as much of the top phase (organic) phase was removed as possible
+    (turns out to be around 450 $\mu$l and transfered to
+    $\boxed{5\ Or}$, $\boxed{6\ Or}$, and $\boxed{7\ Or}$.}
+  \item{Then as much of the bottom phase (aqueous) was removed as
+    possible (turns out to be around 430 $\mu$l) and transfered
+    to $\boxed{5\ Aq}$, $\boxed{6\ Aq}$, and $\boxed{7\ Aq}$.}
+  \end{itemize}
+\item{Measure Volumes of 9 vials (Aqueous, organic, and original
+      - units of $\mu$l)}
+\end{todolist}
+\begin{center}
+  \begin{tabular}{||c c c c c||}
+    \hline
+    Series & Aqueous & Organic & Original & Add To\\ [0.5ex]
+    \hline\hline
+    5 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & 1000 ml\\
+    \hline
+    6 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & 1000 ml\\
+    \hline
+    7 & \hspace{1.5cm} & 450+/-9 & \hspace{1.5cm} & 1000 ml\\
+    \hline
+  \end{tabular}
+\end{center}
+\begin{todolist}
+\item{-}
+\end{todolist}
+\begin{center}
+0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
++\\
+3.941+/-0.027 ml of 0.0+/-0 M Fe(II) in 4.06+/-0.05 M HNO\tsbs{3} solution $\boxed{Fe\ Prep}$\\
++\\
+4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
+\end{center}
+\begin{todolist}
+\item{Count $\boxed{7\ Or}$ 12:00 pm - 3:00 pm}
+\item{Count $\boxed{6\ Or}$ 3:00 pm - 6:00 pm}
+\item{Count $\boxed{5\ Or}$ 6:00 pm - 9:00 pm}
+\item{Count $\boxed{7\ Aq}$ 9:00 pm - 11:00 pm}
+\item{Count $\boxed{6\ Aq}$ 11:00 pm - 1:00 am}
+\item{Count $\boxed{5\ Aq}$ 1:00 am - 3:00 am}
+\end{todolist}
+\begin{todolist}
+\item{Add XX $\mu$l Fe(II) solution to $\boxed{5\ Or}$}
+\item{Add XX $\mu$l Fe(II) solution to $\boxed{6\ Or}$}
+\item{Add XX $\mu$l Fe(II) solution to $\boxed{7\ Or}$}
+\item{Shake $\boxed{5\ Or}$ 15 minutes on pulse mode}
+\item{Shake $\boxed{6\ Or}$ 15 minutes on pulse mode}
+\item{Shake $\boxed{7\ Or}$ 15 minutes on pulse mode}
+\item{Remove XX $\mu$l organic and XX $\mu$l aqueous
+  from $\boxed{Ex\ Buddy}$}
+\item{Centrifuge $\boxed{5\ Or}$, $\boxed{6\ Or}$, $\boxed{7\ Or}$
+  $\boxed{Ex\ Buddy}$, 30,000 rpm for 5 minutes}
+\end{todolist}
+\begin{todolist}
+\item{Vials labeled $\boxed{5\ AqII}$, 
+  $\boxed{5\ OrII}$, $\boxed{6\ AqII}$, $\boxed{6\ OrII}$,
+  $\boxed{7\ AqII}$, $\boxed{7\ OrII}$, transfered into
+  glovebox}
+\item{Separate phases for samples}
+  \begin{itemize}
+  \item{A total of XX drops were dropped in this process}
+    \begin{enumerate}
+    %\item{Sample $\boxed{5}$ aqueous transfer}
+    %\item{Sample $\boxed{6}$ organic transfer}
+    \item{Sample $\boxed{XX}$ aqueous and organic transfer}
+    \end{enumerate}
+  \item{Using a variable pipette and the squish pipette,
+    as much of the top phase (organic) phase was removed as possible
+    (turns out to be around 450 $\mu$l and transfered to
+    $\boxed{5\ OrII}$, $\boxed{6\ OrII}$, and $\boxed{7\ OrII}$.}
+  \item{Then as much of the bottom phase (aqueous) was removed as
+    possible (turns out to be around 430 $\mu$l) and transfered
+    to $\boxed{5\ AqII}$, $\boxed{6\ AqII}$, and $\boxed{7\ AqII}$.}
+  \end{itemize}
+\item{Measure Volumes of 9 vials (Aqueous, organic, and original
+  - units in $\mu$l)}
+\end{todolist}
+\begin{center}
+  \begin{tabular}{||c c c c c||}
+    \hline
+    Series & Aqueous II & Organic II & Original II & Add to\\ [0.5ex]
+    \hline\hline
+    5 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm}\\
+    \hline
+    6 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm}\\
+    \hline
+    7 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm}\\
+    \hline
+  \end{tabular}
+\end{center}
+\begin{todolist}
+\item{Count Vials}
+\item{Modify program for analyzing spectra}
+\item{Analyze spectra}
+\end{todolist}
 %----------------------------------------------------------------------
 %	Examples
 %-----------------------------------------------------------------------
