--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -1003,7 +1003,7 @@ John also mentioned two good techniques, that should be noted:
 %-----------------------------------------------------------------------
 
 \labday{Monday, 24 October 2016\\10:00 am - 12:00 pm\\3:00 pm -
-        10:00 pm}
+        8:00 pm}
 
 \experiment{Cycle_X3_Prep}
 
@@ -1032,6 +1032,8 @@ John also mentioned two good techniques, that should be noted:
 \item[\done]{Moved alpha sample to count on PIPS detector}
   \begin{itemize}
   \item{Saw energy smearing for counts}
+  \item{Preliminary results are what was expected if
+    we take a larger range of counts}
   \end{itemize}
 \end{todolist}
 
@@ -1066,22 +1068,55 @@ John also mentioned two good techniques, that should be noted:
     possible (turns out to be around 430 $\mu$l) and transfered
     to $\boxed{5\ Aq}$, $\boxed{6\ Aq}$, and $\boxed{7\ Aq}$.}
   \end{itemize}
-\item{Measure Volumes of 9 vials (Aqueous, organic, and original
-      - units of $\mu$l)}
+\item[\done]{Measure Volumes of 9 vials (Aqueous, organic, and original
+  - units of $\mu$l)}
+  \begin{itemize}
+  \item{Clean outside of vials before taking volume measurements}
+  \item{Centrifuge vials before taking volume measurements}
+  \item{Google says that 1 drop of water is about 50 $\mu$l}
+  \end{itemize}
 \end{todolist}
 \begin{center}
-  \begin{tabular}{||c c c c c||}
+  \begin{tabular}{||c c c c c c||}
     \hline
-    Series & Aqueous & Organic & Original & Add To\\ [0.5ex]
+    Series & Aqueous & Organic & Original & Should Add To & Missing\\ [0.5ex]
     \hline\hline
-    5 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & 1000 ml\\
+    5 & 461+/-9.22 & 430+/-8.6 & 55+/-5 & 1000+/-7.1 & 54+/-15.3\\
     \hline
-    6 & \hspace{1.5cm} & \hspace{1.5cm} & \hspace{1.5cm} & 1000 ml\\
+    6 & 469+/-9.38 & 430+/-8.6 & 53+/-5 & 1000+/-7.1 & 48+/-15.4\\
     \hline
-    7 & \hspace{1.5cm} & 450+/-9 & \hspace{1.5cm} & 1000 ml\\
+    7 & 469+/-9.38 & 430+/-8.6 & 57.5+/-5 & 1000+/-7.1 & 43.5+/-15.4\\
     \hline
   \end{tabular}
 \end{center}
+
+\begin{todolist}
+\item[\done]{Count $\boxed{7\ Or}$ 12:00 pm - 6:00 pm}
+\item[\done]{Start count $\boxed{7\ Or}$ on face of detector 6:00 pm
+  this is because I cannot see \tss{134}Cs - the isotope I am
+  most concerned about}
+\item[\done]{Move $\boxed{6\ Or}$ and $\boxed{7\ Aq}$ to Antichamber
+  (not sure which one I am counting next)}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Tuesday, 25 October 2016\\8:00 am}
+
+
+\experiment{Cycle_X3}
+
+
+\begin{todolist}
+\item{Count $\boxed{6\ Or}$ 3:00 pm - 6:00 pm}
+\item{Count $\boxed{5\ Or}$ 6:00 pm - 9:00 pm}
+\item{Count $\boxed{7\ Aq}$ 9:00 pm - 11:00 pm}
+\item{Count $\boxed{6\ Aq}$ 11:00 pm - 1:00 am}
+\item{Count $\boxed{5\ Aq}$ 1:00 am - 3:00 am}
+\end{todolist}
 \begin{todolist}
 \item{-}
 \end{todolist}
@@ -1092,14 +1127,6 @@ John also mentioned two good techniques, that should be noted:
 +\\
 4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
 \end{center}
-\begin{todolist}
-\item{Count $\boxed{7\ Or}$ 12:00 pm - 3:00 pm}
-\item{Count $\boxed{6\ Or}$ 3:00 pm - 6:00 pm}
-\item{Count $\boxed{5\ Or}$ 6:00 pm - 9:00 pm}
-\item{Count $\boxed{7\ Aq}$ 9:00 pm - 11:00 pm}
-\item{Count $\boxed{6\ Aq}$ 11:00 pm - 1:00 am}
-\item{Count $\boxed{5\ Aq}$ 1:00 am - 3:00 am}
-\end{todolist}
 \begin{todolist}
 \item{Add XX $\mu$l Fe(II) solution to $\boxed{5\ Or}$}
 \item{Add XX $\mu$l Fe(II) solution to $\boxed{6\ Or}$}
